--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,4 +1,8 @@
 /*Styles */
+body {
+  background-image: url("../img/332_1.jpg") no-repeat fixed center;
+}
+
 #app {
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: #4d4d4d;
@@ -30,4 +34,8 @@ nav {
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
+}
+
+.main {
+  overflow: hidden;
 }
